Simple data editor

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 	<script src="js/lib/html.js"></script>
 	<script src="js/lib/jdb.js"></script>
 	<script src="js/horn,js"></script>
+	<style>
+		body{
+			font-family: Verdana, Arial, Sans-Serif;
+		}
+	</style>
 </head>
 <body>
 	<h1>HornDB Demo Page</h1>
+	<h2>Samples</h2>
+	<ol>
+		<li><a href="samples/catalog/index.html">Catalog</a></li>
+	</ol>
 </body>
 </html>
