--- a/samples/catalog/index.html
+++ b/samples/catalog/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<h1>Catalog Sample</h1>
+	<p>Powered by <a href="../../index.html">HornDb</a>.</p>
 	<div id="pnlEditor"></div>
 </body>
 </html>
